# shrike

./: ChangeLog  INSTALL  Makefile  Makefile.in  Makefile.inc.in  README  README.markdown  README.md  commit  configure  indent  setup
autoconf/: configure.in  install-sh
doc/: AUTHORS  CHANGES  COMMANDS  FAQ  LICENSE  RELEASE  RFC1459  TODO
help/: drop  help  info  inject  invite  kline  login  logout  op_voice  raw  register  rehash  sendpass  set_email  set_founder  set_hidemail  set_hold  set_mlock  set_neverop  set_noop  set_password  set_secure  set_successor  set_verbose  status  unbanme  update  xop
inc/: .indent.pro  extern.h  shrike.h  sysconf.h.in
src/: .depend  .indent.pro  Makefile  Makefile.in  balloc.c  cmode.c  conf.c  confp.c  db.c  event.c  function.c  hash.c  help.c  irc.c  match.c  node.c  services.c  set.c  shrike.c  socket.c  version.sh
